--- a/choclin2.html
+++ b/choclin2.html
@@ -77,20 +77,20 @@
                             <figcaption>Helado</figcaption>
                         </figure>
                         <figure>
-                            <img src="imagenes/milhojas.jpg" alt="Mil Hojas" class="img-fluid">
-                            <figcaption>Mil Hojas</figcaption>
+                            <img src="imagenes/pie de fresa.jpg" alt="Mil Hojas" class="img-fluid">
+                            <figcaption>Pie de Fresas</figcaption>
                         </figure>
                         <figure>
                             <img src="imagenes/notcake.jpg" alt="Notcake" class="img-fluid">
-                            <figcaption>Notcake</figcaption>
+                            <figcaption>Pie</figcaption>
                         </figure>
                         <figure>
                             <img src="imagenes/pie.jpg" alt="Pie" class="img-fluid">
                             <figcaption>Pie</figcaption>
                         </figure>
                         <figure>
-                            <img src="imagenes/postre.jpg" alt="Postre" class="img-fluid">
-                            <figcaption>Postre</figcaption>
+                            <img src="imagenes/pankks.jpg" alt="Postre" class="img-fluid">
+                            <figcaption>Hot Cakes</figcaption>
                         </figure>
                     </section>
                 </div>
