--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                             <h2>Ofertas especiales</h2>
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img src="imagenes/oferta1.jpg" alt="Oferta 1">
+                                    <img src="imagenes/alitas.jpg" alt="Oferta 1">
                                     <h3>Oferta 1</h3>
-                                    <p>Descripción de la oferta 1</p>
+                                    <p>Las alias mas ricas del Mundo las encontraras aquí</p>
                                 </div>
                                 <div class="col-md-4">
-                                    <img src="imagenes/oferta2.jpg" alt="Oferta 2">
+                                    <img src="imagenes/costillas.jpg" alt="Oferta 2">
                                     <h3>Oferta 2</h3>
-                                    <p>Descripción de la oferta 2</p>
+                                    <p>Ricas Costillas, Finas y sabrosas </p>
                                 </div>
                                 <div class="col-md-4">
-                                    <img src="imagenes/oferta3.jpg" alt="Oferta 3">
+                                    <img src="imagenes/Chaufa-con-cecina.jpg" alt="Oferta 3">
                                     <h3>Oferta 3</h3>
-                                    <p>Descripción de la oferta 3</p>
+                                    <p>El mejor Chaufa Selvatico que jamas encontraras</p>
                                 </div>
                             </div>
                         </div>
