--- a/choclin2.html
+++ b/choclin2.html
@@ -81,8 +81,8 @@
                             <figcaption>Pie de Fresas</figcaption>
                         </figure>
                         <figure>
-                            <img src="imagenes/notcake.jpg" alt="Notcake" class="img-fluid">
-                            <figcaption>Pie</figcaption>
+                            <img src="imagenes/trufas.jpg" alt="Notcake" class="img-fluid">
+                            <figcaption>Trufas</figcaption>
                         </figure>
                         <figure>
                             <img src="imagenes/pie.jpg" alt="Pie" class="img-fluid">
